2001-12-18 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* datatype int implemented (untested)
	* added basic python support (SCREAM!)
	

2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added src/cmd/script/director.cpp
	* at end-of-game, the variables are serialized to disk
	* add _string.equal, _std.equal
	

2001-12-16 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added src/cmd/script/msgcenter.{cpp,h}
	* modified src/cmd/script/Makefile.am
	* added callbacks _io.message, _io.printMsgList
	

2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>

	* added commonly used modules:
	  - faction_ships.c
	  - launch.c
	  - random.c
	  - vec3.c
	* added mission total_war1, launch_and_launch1

	
2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added _std.isNull function to test for null objects
	* added callback 'launch' to launch new ships from script
	
	
2001-12-14 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* a joystick axis can now have an 'inverse' attribute
	* more fixes for parseCalike problem
	
	
2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* fix for Patrick's parseCalike problem?

	
2001-12-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* added strings to c_alike.yacc
	* added string callbacks src/cmd/script/script_call_string.cpp
	* made Unit remember the Flightgroup & nr
	* testd_unit1.mission now prints out also the fg id
	

2001-12-12 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added file src/cmd/script/script_call_unit.cpp


2001-12-12 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added file src/cmd/script/script_call_olist.cpp
	* improved olist code
	* added variable 'startgame' to section 'interpreter' in
	  vegastrike.config
	
	
2001-12-11 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* interpreter runs now while the game goes on
	* added callback 'getGameTime'

	